# pycityjson

./: .gitignore  README.md  dbh.py  env.yml  pyproject.toml
cityjson/io/: __init__.py  cityjson.py  parser.py  wavefront.py
cityjson/model/: city.py  cityobject.py  geometry.py  template.py  vertices.py
pycityjson/: __init__.py
pycityjson/guid/: __init__.py  guid.py
pycityjson/io/: __init__.py  cityjson.py  cityjson_input.py  cityjson_output.py  parser.py  wavefront.py  wavefront_output.py
pycityjson/model/: __init__.py  appearance.py  city.py  cityobject.py  geometry.py  matrix.py  primitive.py  semantic.py  template.py  vertices.py
src/cityjson/: __init__.py  city.py  cityjson.py  cityobject.py  cityobjects.py  cityvertices.py  parser.py  semantic.py  template.py
src/cityjson/citygeometry/: citygeometry.py
src/cityjson/cityobjects/: __init__.py  cityobject.py  cityobjects.py  parser.py  template.py
src/cityjson/geometry/: __init__.py  geometry.py  instance.py  matrix.py  parser.py
src/cityjson/template/: __init__.py  parser.py  template.py
src/cityjson/templates/: __init__.py  parser.py  templates.py
src/cityjson/vertices/: __init__.py  parser.py  vertices.py
src/cityjsonio/: __init__.py  cityjson.py  parser.py
src/cityjsonio/cityobjects/: __init__.py  cityjson.py  parser.py
src/cityjsonio/geometry/: __init__.py  cityjson.py  parser.py
src/guid/: __init__.py
src/scripts/: attribute.py  jsonio.py  matrix.py
src/uuid/: guid.py
tests/: conftest.py
tests/integration/: test_foo.py  test_json_integration.py
(+15 files in other folders)
