[tool.poetry]
name = "pycityjson"
version = "0.1.0"
description = ""
authors = ["comtois-etienne <comtois.etienne@outlook.com>"]
license = "Apache License Version 2.0"
readme = "README.md"

[tool.ruff]
line-length = 180

[tool.ruff.lint]
select = ["TID252", "I", "COM812"]

[tool.ruff.format]
quote-style = "single"


[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ruff = "^0.6.7"
pytest = "^8.3.3"
pytest-unordered = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
